# c-api-parser

./: Cargo.toml  README.md  input.h
src/: c-api-header.pest  main.rs
